# solution-Hari-Micic

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0187bc0490f4_add_title_index_to_tickets.py  1b59f51b76d5_create_tickets_table.py  3fadbfd951b0_add_locally_modified_flag_to_tickets.py  54c27220a5ce_add_ticket_constraints.py  f666d7c46585_add_source_fields_to_tickets.py
docs/: openapi.json  redoc.html
src/tickethub/: cache.py  config.py  database.py  logging_config.py  main.py  mappers.py  models.py  rate_limit.py  schemas.py
src/tickethub/clients/: dummyjson.py  dummyjson_auth.py
src/tickethub/commands/: export_openapi.py  sync.py
src/tickethub/repositories/: stats.py  tickets.py
src/tickethub/routers/: auth.py  stats.py  tickets.py
src/tickethub/services/: background_sync.py  sync_service.py
tests/: test_auth_endpoint.py  test_health.py  test_mappers.py  test_schemas.py  test_stats_endpoint.py  test_sync_service.py  test_ticket_endpoints.py
