[project]
name = "tickethub"
version = "0.1.0"
description = "TicketHub REST API entrance test solution"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]",
    "httpx==0.27.0",
    "sqlalchemy==2.0.36",
    "aiosqlite",
    "alembic",
    "pydantic-settings",
    "pydantic>=2.7,<2.8",
    "asyncpg",
    "redis",
    "slowapi",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = [
    "ignore::PendingDeprecationWarning:starlette.formparsers",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["B008"]