[project]
name = "tickethub"
version = "0.1.0"
description = "TicketHub REST API entrance test solution"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.49.0",
    "httpx==0.27.0",
    "sqlalchemy==2.0.36",
    "aiosqlite==0.22.1",
    "alembic==1.18.5",
    "pydantic-settings==2.14.2",
    "pydantic>=2.7,<2.8",
    "asyncpg==0.31.0",
    "redis==8.0.1",
    "slowapi==0.1.10",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-cov",
    "ruff==0.15.20",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = [
    "ignore::PendingDeprecationWarning:starlette.formparsers",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["B008"]